include/dss_capi.h

    /*
    Array of strings consisting of all element names in the active class.
    */
    DSS_CAPI_DLL void ActiveClass_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as ActiveClass_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void ActiveClass_Get_AllNames_GR(void);
    /*
    Sets first element in the active class to be the active DSS object. If object is a CktElement, ActiveCktELment also points to this element. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t ActiveClass_Get_First(void);
    /*
    Sets next element in active class to be the active DSS object. If object is a CktElement, ActiveCktElement also points to this element.  Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t ActiveClass_Get_Next(void);
    /*
    Name of the Active Element of the Active Class
    */
    DSS_CAPI_DLL char* ActiveClass_Get_Name(void);
    DSS_CAPI_DLL void ActiveClass_Set_Name(char* Value);
    /*
    Number of elements in this class. Same as Count property.
    */
    DSS_CAPI_DLL int32_t ActiveClass_Get_NumElements(void);
    /*
    Returns name of active class.
    */
    DSS_CAPI_DLL char* ActiveClass_Get_ActiveClassName(void);
    /*
    Number of elements in Active Class. Same as NumElements Property.
    */
    DSS_CAPI_DLL int32_t ActiveClass_Get_Count(void);